--- a/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/delete-record/delete-record.component.html
@@ -1,14 +1,14 @@
-<div class="govuk-grid-row govuk-!-margin-bottom-0">
+<div class="govuk-grid-row govuk-!-margin-bottom-">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl govuk-!-margin-right-3" data-testid="workerNameAndRole">
-      {{ worker.nameOrId }}: {{ worker.mainJob?.other ? worker.mainJob.other : worker.mainJob.title }}
+      {{ worker.nameOrId }}
     </span>
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-9">
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">
       You're about to delete this {{ trainingOrQualification }} record
     </h1>
 
     <ng-container *ngIf="trainingView; else qualificationView">
-      <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--wide-key">
+      <dl class="govuk-summary-list govuk-summary-list--top-border govuk-summary-list--wide-key">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Name or ID number</dt>
           <dd class="govuk-summary-list__value" data-testid="workerName">
@@ -29,7 +29,7 @@
     </ng-container>
 
     <ng-template #qualificationView>
-      <dl class="govuk-summary-list govuk-summary-list--no-border govuk-summary-list--wide-key">
+      <dl class="govuk-summary-list govuk-summary-list--top-border govuk-summary-list--wide-key">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Name or ID number</dt>
           <dd class="govuk-summary-list__value" data-testid="workerName">
@@ -51,9 +51,9 @@
       </dl>
     </ng-template>
 
-    <div class="govuk-button-group govuk-!-margin-top-7">
-      <button type="button" class="govuk-button govuk-button--warning govuk-!-margin-right-2" (click)="deleteRecord()">
-        Delete this {{ trainingOrQualification }} record
+    <div class="govuk-button-group govuk-!-margin-top-8">
+      <button type="button" class="govuk-button govuk-button--warning govuk-!-margin-right-7" (click)="deleteRecord()">
+        Delete record
       </button>
       <a
         class="govuk-button govuk-button--link govuk-!-margin-left-9"
