--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,42 +2,40 @@
   <a class="govuk-skip-link" href="#main-content" (click)="skip($event)">Skip to main content</a>
   <app-header></app-header>
 
-  <!-- <div
-    id="content"
-    [class]="{ 'govuk-width-container': !isAdminSection, 'asc-width-container-admin-section': isAdminSection }"
-  > -->
-  <div id="content">
-    <main
-      id="main-content"
-      class="govuk-main-wrapper app-main-class govuk-util__no-focus govuk-!-padding-top-0"
-      #content
-      role="main"
-      tabindex="-1"
+  <ng-container *ngIf="dashboardView; else otherView">
+    <div id="content">
+      <main
+        id="main-content"
+        class="govuk-main-wrapper app-main-class govuk-util__no-focus govuk-!-padding-top-0"
+        #content
+        role="main"
+        tabindex="-1"
+      >
+        <router-outlet> </router-outlet>
+      </main>
+    </div>
+  </ng-container>
+  <ng-template #otherView>
+    <div
+      id="content"
+      [class]="{ 'govuk-width-container': !isAdminSection, 'asc-width-container-admin-section': isAdminSection }"
     >
-      <router-outlet> </router-outlet>
-    </main>
-  </div>
+      <app-phase-banner></app-phase-banner>
+      <app-back-link></app-back-link>
+      <app-new-back-link></app-new-back-link>
+      <app-breadcrumbs></app-breadcrumbs>
+      <app-alert></app-alert>
 
-  <!-- OLD / EXISTING LAYOUT -->
-  <!-- <div
-    id="content"
-    [class]="{ 'govuk-width-container': !isAdminSection, 'asc-width-container-admin-section': isAdminSection }"
-  >
-    <app-phase-banner></app-phase-banner>
-    <app-back-link></app-back-link>
-    <app-new-back-link></app-new-back-link>
-    <app-breadcrumbs></app-breadcrumbs>
-    <app-alert></app-alert>
-
-    <main
-      id="main-content"
-      class="govuk-main-wrapper app-main-class govuk-util__no-focus"
-      #content
-      role="main"
-      tabindex="-1"
-    >
-      <router-outlet> </router-outlet>
-    </main>
-  </div> -->
+      <main
+        id="main-content"
+        class="govuk-main-wrapper app-main-class govuk-util__no-focus"
+        #content
+        role="main"
+        tabindex="-1"
+      >
+        <router-outlet> </router-outlet>
+      </main>
+    </div>
+  </ng-template>
   <app-footer></app-footer>
 </div>
