Add link for name or id which navigate to training and qualification summary record

--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -22,7 +22,22 @@
       <ng-container *ngIf="trainingCategory.id == trainingCategoryId">
         <tr class="govuk-table__row govuk-util__vertical-align-top" *ngFor="let training of trainingCategory.training">
           <td class="govuk-table__cell govuk-!-font-weight-regular">
-            {{ training.worker.NameOrIdValue }}
+            <ng-container *ngIf="canEditWorker; else nameOrId">
+              <a
+                [routerLink]="[
+                  '/workplace',
+                  this.workplace.uid,
+                  'training-and-qualifications-record',
+                  training.worker.uid,
+                  'training'
+                ]"
+              >
+                {{ training.worker.NameOrIdValue }}</a
+              >
+            </ng-container>
+            <ng-template #nameOrId>
+              {{ training.worker.NameOrIdValue }}
+            </ng-template>
           </td>
           <td class="govuk-table__cell govuk-!-font-weight-regular">
             {{ training.worker.mainJob?.title }}
