--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -1,17 +1,17 @@
-<div class="govuk-grid-row">
+<div class="govuk-grid-row-two-thirds-from-desktop">
   <div class="govuk-grid-column">
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row govuk-!-margin-left-0 govuk-margin-right-0">
       <span class="govuk-caption-l">Add multiple records</span>
       <h1 class="govuk-heading-xl">Summary</h1>
     </div>
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column">
+    <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
+      <div class="govuk-grid-column-one-half govuk-!-padding-0">
         <p>Check these details before you confirm them.</p>
       </div>
       <div class="govuk-grid-column">
         <button
           type="submit"
-          class="govuk-button govuk-!-margin-right-9"
+          class="govuk-button govuk-util__float-right"
           data-testid="confirmButton"
           (click)="onSubmit()"
         >
@@ -19,9 +19,12 @@
         </button>
       </div>
     </div>
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0 govuk-!-margin-bottom-6">
       <span class="govuk-heading-m">Selected staff</span>
-      <div class="govuk-summary-list--no-border govuk-!-width-full govuk-" data-testid="selectedStaffSummary">
+      <div
+        class="govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full govuk-"
+        data-testid="selectedStaffSummary"
+      >
         <ng-container *ngFor="let worker of workers; index as i">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -42,9 +45,11 @@
         </ng-container>
       </div>
     </div>
-    <div class="govuk-grid-row">
+    <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
       <span class="govuk-heading-m">Training record details</span>
-      <div class="govuk-summary-list--no-border govuk-!-width-full">
+      <div
+        class="govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full"
+      >
         <ng-container *ngFor="let record of trainingRecords; index as i">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
