--- a/src/app/shared/components/training-select-view-panel/training-select-view-panel.component.html
+++ b/src/app/shared/components/training-select-view-panel/training-select-view-panel.component.html
@@ -1,23 +1,34 @@
-<div class="asc-tabs asc-tabs--border-bottom govuk-!-margin-top-5">
-  <ul class="asc-tabs__list" role="tablist" #tablist>
-    <ng-container *ngFor="let tab of tabs; let i = index">
-      <li class="asc-tabs__list-item" [class.asc-tabs__list-item--active]="tab.active">
-        <a
-          id="tab_{{ tab.slug }}"
-          class="govuk-link govuk-link--no-visited-state asc-tabs__link"
-          [class.asc-tabs__link--active]="tab.active"
-          href="#"
-          role="tab"
-          [attr.aria-controls]="tab.slug"
-          [attr.aria-selected]="tab.active"
-          [attr.tabindex]="tab.active ? 0 : -1"
-          (click)="selectTab($event, i)"
-          (keyup)="onKeyUp($event)"
-          (keydown)="onKeyDown($event)"
-          >{{ tab.title }}</a
-        >
-      </li>
-    </ng-container>
+<div class="asc-tabs asc-tabs--border-bottom govuk-!-margin-top-5 govuk-!-margin-bottom-5">
+  <ul class="asc-tabs__list" role="tablist">
+    <li
+      class="asc-tabs__list-item"
+      data-testid="staffListItem"
+      [class.asc-tabs__list-item--active]="!viewTrainingByCategory"
+    >
+      <a
+        id="tab_"
+        class="govuk-link govuk-link--no-visited-state asc-tabs__link"
+        [class.asc-tabs__link--active]="!viewTrainingByCategory"
+        href="#"
+        role="tab"
+        (click)="this.handleViewChange($event)"
+        >Staff</a
+      >
+    </li>
+    <li
+      class="asc-tabs__list-item"
+      data-testid="trainingListItem"
+      [class.asc-tabs__list-item--active]="viewTrainingByCategory"
+    >
+      <a
+        id="tab_"
+        class="govuk-link govuk-link--no-visited-state asc-tabs__link"
+        [class.asc-tabs__link--active]="viewTrainingByCategory"
+        href="#"
+        role="tab"
+        (click)="this.handleViewChange($event)"
+        >Training</a
+      >
+    </li>
   </ul>
 </div>
-<ng-content></ng-content>
