fix(preProdStaffRecordsSnaggingList): Removed unncessary WDF change links, added staff details to be behind a WDF url, stopped wrapping text on WDF Pages

--- a/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-staff-record.component.html
+++ b/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-staff-record.component.html
@@ -6,7 +6,7 @@
         Staff record
       </h1>
     </div>
-    <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
+    <div class="govuk-grid-column-one-third govuk-!-margin-top-8 govuk__nowrap">
       <p>Last updated on {{ worker.updated | date: 'longDate' }}</p>
     </div>
   </div>
