--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -8,7 +8,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' basic record details'"
-        [link]="mandatoryDetailsPage ? getMandatoryDetailsRoute() : getRoutePath('staff-details')"
+        [link]="mandatoryDetailsPage ? getMandatoryDetailsRoute() : getRoutePath('staff-details', wdfView)"
         [hasData]="true"
       ></app-summary-record-change>
     </dd>
@@ -41,14 +41,6 @@
         [workerUid]="worker.uid"
       ></app-wdf-field-confirmation>
     </dd>
-    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
-      <app-summary-record-change
-        *ngIf="wdfView && !(worker.wdf?.mainJob.isEligible === 'Yes' && !worker.wdf?.mainJob.updatedSinceEffectiveDate)"
-        [explanationText]="' basic record details'"
-        [link]="getRoutePath('mandatory-details/staff-details')"
-        [hasData]="true"
-      ></app-summary-record-change>
-    </dd>
   </div>
 
   <div class="govuk-summary-list__row">
@@ -75,16 +67,6 @@
         (fieldConfirmation)="this.confirmField('contract')"
         [workerUid]="worker.uid"
       ></app-wdf-field-confirmation>
-    </dd>
-    <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
-      <app-summary-record-change
-        *ngIf="
-          wdfView && !(worker.wdf?.contract.isEligible === 'Yes' && !worker.wdf?.contract.updatedSinceEffectiveDate)
-        "
-        [explanationText]="' basic record details'"
-        [link]="getRoutePath('staff-details')"
-        [hasData]="true"
-      ></app-summary-record-change>
     </dd>
   </div>
 </dl>
